--- a/css/custom.css
+++ b/css/custom.css
@@ -42,3 +42,9 @@
     margin-left: 50px;
     margin-right: 50px;
 }
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
