--- a/css/custom.css
+++ b/css/custom.css
@@ -42,7 +42,7 @@
     margin-left: 50px;
     margin-right: 50px;
 }
-.center{
+.center-first {
   display: block;
   margin-left: auto;
   margin-right: auto;
